# ACTv2

ebut_full_codebase/: Cargo.toml  README.md
ebut_full_codebase/docs/: AGENT_TASKS.md  FULL_CODEBASE_AUDIT.md
ebut_full_codebase/src/: batched_eq.rs  bbs_proof.rs  file_binding.rs  lib.rs  master_mint.rs  revocation.rs  same_x_bridge.rs  serde_utils.rs  server.rs  spend.rs  upload.rs
ebut_full_codebase/src/v3_zkp/: batched_eq.rs  gap.rs  generators.rs  prover.rs  utils.rs
src/: spend.rs
v3_zkp/: batched_eq.rs  gap.rs  generators.rs  prover.rs
